@@ -1,4 +1,5 @@
 buildscript {
+    ext.javax_annotation_api_version = '1.2'
     ext.kotlin_version = '1.2.51'
     ext.io_prometheus_version = '0.4.0'
     ext.jetty_version = '9.4.11.v20180605'
@@ -18,12 +19,16 @@ buildscript {
     ext.ekstern_helse_fastlegeinformasjon_tjenestespesifikasjon_version = '2.1.3'
     ext.nav_fim_organisasjon_v4_tjenestespesifikasjon_version =  '1.0.4'
     ext.confluent_version = "4.0.0"
-    ext.kafka_version = "1.0.0"
+    ext.kafka_version = "2.0.0"
     ext.nav_dokumentproduksjon_v3_tjenestespesifikasjon_version = '3.1.3'
     ext.jaxb2_commons_basic_version = '1.11.1'
     ext.partner_emottak_version = '1.0.0'
     ext.adresseregisteretV1_version = '1.0.2'
     ext.altinn_correspondence_agency_external_version = '1.0'
+    ext.jaxb_api_version = '2.1'
+    ext.jaxws_api_version = "2.2" // TODO: 2.3.0
+    ext.javax_activation_version = '1.1.1'
+    ext.altinnkanal_schemas = '1.0.0'
 
     ext.jaxb2SourceDir = file("$buildDir/generated-sources/jaxb2")
 }
@@ -47,12 +52,7 @@ applicationDefaultJvmArgs = [
         '-Dcom.ibm.mq.cfg.useIBMCipherMappings=false',
         '-Djavax.net.ssl.trustStore=${NAV_TRUSTSTORE_PATH}',
         '-Djavax.net.ssl.trustStorePassword=${NAV_TRUSTSTORE_PASSWORD}',
-        '-Djavax.net.ssl.trustStoreType=JKS',
-        '-XX:+UnlockExperimentalVMOptions',
-        '-XX:+UseCGroupMemoryLimitForHeap',
-        '-XX:+UseG1GC',
-        '-XshowSettings:vm'/*,
-        '-Dlogback.configurationFile=logback-remote.xml'*/
+        '-Djavax.net.ssl.trustStoreType=JKS'
 ]
 
 startScripts {
@@ -203,6 +203,9 @@ sourceSets {
     }
 }
 
+// suppress warning for experimental coroutines
+kotlin { experimental { coroutines "enable"} }
+
 compileKotlin {
     dependsOn wsdl2java
     dependsOn generateJaxb2
@@ -229,9 +232,14 @@ repositories {
 
 dependencies {
     generateJaxb2 "com.sun.xml.bind:jaxb-xjc:$jaxb_version"
-    generateJaxb2 "com.sun.xml.bind:jaxb-impl:$jaxb_version"
-    generateJaxb2 "com.sun.xml.bind:jaxb-core:$jaxb_version"
+    generateJaxb2 "org.glassfish.jaxb:jaxb-runtime:$jaxb_version"
+    generateJaxb2 "javax.xml.bind:jaxb-api:$jaxb_api_version"
     generateJaxb2 "org.jvnet.jaxb2_commons:jaxb2-basics-ant:$jaxb_basic_ant_version"
+    generateJaxb2 "javax.activation:activation:$javax_activation_version"
+    wsdl2java "javax.xml.bind:jaxb-api:2.1"
+    wsdl2java "javax.xml.ws:jaxws-api:2.2.1"
+    wsdl2java "javax.activation:activation:1.1.1"
+    wsdl2java "javax.annotation:javax.annotation-api:1.3.2"
 
     // General application flow
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
@@ -242,6 +250,7 @@ dependencies {
     implementation "org.apache.cxf:cxf-rt-features-logging:$cxf_version"
     implementation "org.apache.cxf:cxf-rt-transports-http:$cxf_version"
     implementation "org.apache.cxf:cxf-rt-ws-security:$cxf_version"
+    implementation "javax.xml.ws:jaxws-api:$jaxws_api_version"
 
     // Everything used for HTTP stats and selftest
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
@@ -281,4 +290,9 @@ dependencies {
     implementation "io.confluent:kafka-avro-serializer:$confluent_version"
     implementation "org.apache.kafka:kafka-clients:$kafka_version"
     implementation "org.jvnet.jaxb2_commons:jaxb2-basics-runtime:$jaxb2_commons_basic_version"
+    implementation "javax.xml.bind:jaxb-api:$jaxb_api_version"
+    implementation "javax.activation:activation:$javax_activation_version"
+    implementation "org.glassfish.jaxb:jaxb-runtime:$jaxb_version"
+
+    implementation "no.nav.altinnkanal:altinnkanal-schemas:$altinnkanal_schemas"
 }
